Fixing the overflowing components

--- a/src/components/messagebody.css
+++ b/src/components/messagebody.css
@@ -15,11 +15,11 @@
 }
 
 .recipient_avatar {
+    margin-top: 0.3rem;
     overflow: hidden;
-    padding: 1rem;
     border: 1px solid #7c7c7c;
-    width: 20px;
-    height: 20px;
+    width: 50px;
+    height: 50px;
     object-fit: cover;
     border-radius: 50%;
 }
