--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -2,6 +2,7 @@
     display: block;
     padding: 0;
     margin: 0;
+    height: 100vh;
     box-sizing: border-box;
     overflow: auto;
     background-color: #fefff5;
